Added boilerplate nav

--- a/index.html
+++ b/index.html
@@ -12,5 +12,37 @@
 			href="style.css"
 		/>
 	</head>
-	<body></body>
+	<body>
+		<header>
+			<nav class="nav">
+				<div class="nav__logo">
+					<p>Kat's Quirky Corner</p>
+				</div>
+				<div class="nav__links">
+					<ul>
+						<li>
+							<a href="./pages/book.html">Book Recommender</a>
+						</li>
+						<li><a href="./pages/quiz.html">Pokemon Quiz</a></li>
+						<li><a href="./pages/tunes.html">Disney Tunes</a></li>
+					</ul>
+				</div>
+			</nav>
+		</header>
+
+		<main>
+			<!-- Hero Section -->
+			<section></section>
+
+			<!-- Joke of the day Section -->
+			<section></section>
+
+			<!-- Tiles Section -->
+			<section></section>
+		</main>
+
+		<footer>
+            
+        </footer>
+	</body>
 </html>
