Adds nav bar links and scss variabls

--- a/index.html
+++ b/index.html
@@ -8,23 +8,65 @@
 		/>
 		<title>Kat's Quirky Corner | Home</title>
 		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
 			rel="stylesheet"
-			href="style.css"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="./css/style.css"
 		/>
 	</head>
 	<body>
-		<header>
-			<nav class="nav">
-				<div class="nav__logo">
-					<p>Kat's Quirky Corner</p>
+		<header class="header">
+			<nav class="header__nav">
+				<div class="header__title">
+					<a
+						href="./index.html"
+						class="header__title__link"
+					>
+						<p>
+							Kat's
+							<span class="header__title--accent">Quirky</span>
+							Corner
+						</p>
+					</a>
 				</div>
-				<div class="nav__links">
-					<ul>
-						<li>
-							<a href="./pages/book.html">Book Recommender</a>
+				<div class="header__nav__links">
+					<ul class="nav__list">
+						<li class="nav__list__item">
+							<a
+								href="./pages/book.html"
+								class="nav__list__link"
+								>Book Recommender</a
+							>
 						</li>
-						<li><a href="./pages/quiz.html">Pokemon Quiz</a></li>
-						<li><a href="./pages/tunes.html">Disney Tunes</a></li>
+						<li class="nav__list__item">
+							<a
+								href="./pages/quiz.html"
+								class="nav__list__link"
+								>Pokemon Quiz</a
+							>
+						</li>
+						<li class="nav__list__item">
+							<a
+								href="./pages/tunes.html"
+								class="nav__list__link"
+								>Disney Tunes</a
+							>
+						</li>
 					</ul>
 				</div>
 			</nav>
@@ -41,8 +83,6 @@
 			<section></section>
 		</main>
 
-		<footer>
-            
-        </footer>
+		<footer></footer>
 	</body>
 </html>
