--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 			rel="stylesheet"
 			href="./css/style.css"
 		/>
+		<script
+			src="./js/index.js"
+			async
+			defer
+		></script>
 	</head>
 	<body>
 		<header class="header">
@@ -50,9 +55,9 @@
 					<ul class="nav__list">
 						<li class="nav__list__item">
 							<a
-								href="./pages/book.html"
+								href="./pages/movie.html"
 								class="nav__list__link"
-								>Book Recommender</a
+								>Movie Recommender</a
 							>
 						</li>
 						<li class="nav__list__item">
@@ -89,7 +94,12 @@
 			<!-- Joke of the day Section -->
 			<section class="joke">
 				<h2 class="joke__heading">Joke of the day 🤭</h2>
-				<button class="btn">Click to get today's joke</button>
+				<button
+					class="btn"
+					onclick="getJoke()"
+				>
+					Click to get today's joke
+				</button>
 				<div class="joke__response"></div>
 			</section>
 
@@ -109,11 +119,11 @@
 						</div>
 					</a>
 					<a
-						href="./pages/book.html"
+						href="./pages/movie.html"
 						class="tile__nav"
 					>
 						<div class="tile">
-							<p>Book</p>
+							<p>Movie</p>
 						</div>
 					</a>
 					<a
@@ -148,9 +158,9 @@
 					<ul class="footer__list">
 						<li class="footer__list__item">
 							<a
-								href="./pages/book.html"
+								href="./pages/movie.html"
 								class="footer__list__link"
-								>Book Recommender</a
+								>Movie Recommender</a
 							>
 						</li>
 						<li class="footer__list__item">
